css/bootstrap.css
/* ... */
@media (max-width: 979px) {
	#box_post .box{
	  width: 55%;
	}
	#box_post .box .social a.face_post{
		height: auto;
	    padding: 10px 0;
	    text-align: center;
	}
	#box_post .box .social a.face_post span.face_icon{
		display: none;
	}
	#box_post .box .social a.face_post span.face_icon img{
		margin: 0;
	}
	#box_post .box .social a.face_post span.text{
		 float: none;
	    font-size: 13px;
	    margin:0px;
	    text-align: center;
	}
	#box_post .box .form .remember .left{
		min-width: 45px;
    	width: 100%;
	}
	#box_post .box .form .remember .left p{
	}
	#box_post .box .form .remember .right{
		float: left;
    	margin-top: 16px;
	}
}

@media (min-width: 980px) {
	#box_post .box{	  
		width: 41%;
	}
}
@media (max-width: 480px) {
	#box_post .box{
		width: 100%;  
	}
	#box_post .box .social{
		margin: 0 auto;
		width: 83%;
	}
	#box_post .box .social a.face_post{
		background: #6887c4;
		background: -moz-linear-gradient(top, #6887c4 0%, #4566a9 100%);
		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6887c4), color-stop(100%,#4566a9));
		background: -webkit-linear-gradient(top, #6887c4 0%,#4566a9 100%);
		background: -o-linear-gradient(top, #6887c4 0%,#4566a9 100%);
		background: -ms-linear-gradient(top, #6887c4 0%,#4566a9 100%); 
		background: linear-gradient(to bottom, #6887c4 0%,#4566a9 100%); 
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6887c4', endColorstr='#4566a9',GradientType=0 );
		border: 1px solid #3B4868;
	    border-radius: 3px 3px 3px 3px;
	    display: inline-block;
	    height: 37px;
	    overflow: hidden;
	    width: 99%;
	    padding: 0;
	    text-decoration: none !important;
	}
	#box_post .box .social a.face_post span.face_icon{
		background-color: #39599F;
	    border-radius: 3px 0 0 3px;
	    float: left;
	    display: inline-block;
	    height: 37px;
	    text-align: center;
	    width: 51px;
	}
	#box_post .box .social a.face_post span.face_icon img{
		margin-top: 5px;
	}
	#box_post .box .social a.face_post span.text{
		color: #FFFFFF;
	    float: left;
	    font-size: 14px;
	    margin: 8px 0 0 13px;
	    text-shadow: 1px 1px 0 #39599F;
	}
	#box_post .box .form .remember .left{
		width: 100%;
	}
	#box_post .box .form .remember .right{
		float: left;
    	margin-top: 20px;
	}

}
/* Large desktop */
@media (min-width: 1200px) {
	#box_post .box{
		width: 61%;
	}

}

.bignum{
	font-size: 30px;
	color: #81A1B1;
	font-family: arvo;
}




  * {
    font-family: Verdana, Arial, sans-serif;
  }
  a:link {
    color:#000;
    text-decoration: none;
  }
  a:visited {
    color:#000;
  }
  a:hover {
    color:#33F;
  }
  .button {
    background: -webkit-linear-gradient(top,#008dfd 0,#0370ea 100%);
    border: 1px solid #076bd2;
    border-radius: 3px;
    color: #fff;
    /*display: none;*/
    font-size: 13px;
    font-weight: bold;
    line-height: 1.3;
    padding: 8px 25px;
    text-align: center;
    text-shadow: 1px 1px 1px #076bd2;
    letter-spacing: normal;
  }
  .center {
    padding: 10px;
    text-align: center;
  }
  .final {
    color: black;
    padding-right: 3px; 
  }
  .interim {
    color: gray;
  }
  .info {
    font-size: 14px;
    text-align: center;
    color: #777;
    display: none;
  }
  .right {
    float: right;
  }
  .sidebyside {
    display: inline-block;
    width: 45%;
    min-height: 40px;
    text-align: left;
    vertical-align: top;
    margin: 30px 5px 10px 5px;
  }
  #headline {
    font-size: 40px;
    font-weight: 300;
    padding: 10px;
  }
  #info {
    font-size: 20px;
    text-align: center;
    color: #fff;
    padding: 20px 0px 20px 0px;
  }
  #results {
    font-size: 14px;
    font-weight: 300;
    border: 1px solid #ddd;
    padding: 15px;
    text-align: left;
    min-height: 450px;
    padding: 0px 15px 0px 15px;
  }
  #start_button {
    border: 0;
    background-color:transparent;
    padding: 0;
  }

[class*="paper"] {
  float: left;
  min-height: 1px;
  margin-left: 20px;
}

  
.paper {
    font: normal 12px/1.5 "Lucida Grande", arial, sans-serif;
    width: 50%;
    /*
    margin: 0 auto 10px;
    padding: 6px 5px 4px 42px;
    position: relative;
    */
    color: #444;
    /*line-height: 20px;*/
    border: 1px solid #d2d2d2;
 
    background: #fff;
    background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 4px;
    background: -webkit-linear-gradient(top, #226588 0%, #E0EBEC 9%) 0 1px;
    background: -moz-linear-gradient(top, #226588 0%, #E0EBEC 9%) 0 1px;
    background: -ms-linear-gradient(top, #226588 0%, #E0EBEC 9%) 0 1px;
    background: -o-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
    background: linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
 
    -webkit-background-size: 100% 20px;
    -moz-background-size: 100% 20px;
    -ms-background-size: 100% 20px;
    -o-background-size: 100% 20px;
    background-size: 100% 20px;
 
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
 
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.07);
    box-shadow: 0 1px 2px rgba(0,0,0,0.07);
    border-radius: 17px;
}


.paper::before {
    content: '';
    position: absolute;
    width: 4px;
    top: 0;
    left: 30px;
    bottom: 0;
    /*
    border: 1px solid;
    border-color: transparent #efe4e4;
    */
}

.paper h1,
.paper h2 {
    font-size: 16px;
    line-height: 16px;
    margin: 0 0 4px;
}
.paper h3,
.paper h4,
.paper h5 {
    font-size: 14px;
    line-height: 16px;
    margin: 0 0 4px;
}
.paper h4,
.paper h5 {
    font-weight: normal;
}
.paper p {margin: 0 0 20px;}
.paper p:last-child {margin: 0;}
.paper ul {margin: 0 0 20px;}

